# GPXReader

./: README.md  pyproject.toml
gpxreader/: geodectic.py  read.py  utils.py
